--- a/styleguide/custom/themes/styleguide/src/sass/base/_typography.scss
+++ b/styleguide/custom/themes/styleguide/src/sass/base/_typography.scss
@@ -1,11 +1,10 @@
 // Modular scale is in relation to 1.1rem = 22px
 body {
-	color: rgba(0,0,0,0.85);
+	color: $base-font-color;
 }
 
 h1, h2, h3, h4, h5, h6 {
 	margin: 0;
-	// margin-bottom: 30px;
 }
 
 h1 {
@@ -28,9 +27,8 @@ h2 {
 	font-family: $big-headings;
 	text-transform: uppercase;
 	font-weight: 800;
-	font-size: modular-scale(3, 1rem); //32px
-	line-height: modular-scale(3, 1rem);
-	// margin-bottom: 25px;
+	font-size: modular-scale(3, 0.9rem); //32px
+	line-height: modular-scale(3, 0.9rem);
 	margin-bottom: 20px;
 	margin-top: 20px;
 	@include media($bp-large) {
@@ -125,7 +123,6 @@ h3.typography__fonts,
 h3.tone__principals, 
 h3.photography__principals,
 h3.typography__fonts {
-	// margin-top: 20px;
 }
 
 #templates ul li {
@@ -146,7 +143,6 @@ main {
 		line-height: modular-scale(1, 1.2rem);
 		margin-top: 0;
 		margin-bottom: 30px;
-		// letter-spacing: 1px;
 		@include media($bp-large) {
 		    font-size: modular-scale(0);
 		    line-height: modular-scale(1, 1.4rem);
@@ -182,15 +178,12 @@ article {
 #mainmenu li a {
 	font-size: modular-scale(0, 0.9rem); //20px
 	line-height: modular-scale(0);
-	.selected {
-		font-weight: 600;
-		// background-color: #FFDD35;
-	}
 }
 
+// The color of the bar is dynamic and can be changed within the theme
+// 	under the 'Styleguide' section - 'Header Color'
 .selected {
-		font-weight: 600;
-		// background-color: #FFDD35;
+	font-weight: 600;
 }
 
 aside {
@@ -202,7 +195,6 @@ aside p {
 	font-size: modular-scale(0, 0.9rem); //20px
 	line-height: modular-scale(0);
 	text-transform: uppercase;
-	// line-height: modular-scale(3, 1.25rem); //20px
 	margin-bottom: 0;
 	margin-top: 0;
 	padding-top: 0;
@@ -228,12 +220,10 @@ aside p {
 .sidebar__nav ul {
 	font-family: $main-headings;
 	font-weight: 300;
-	// font-size: modular-scale(-4, 5rem);
 	font-size: modular-scale(0);
 	line-height: modular-scale(2);
 	margin: 0;
 	li {
-		// padding: 5px 0;
 		a {
 			text-decoration: none;
 			color: $base-font-color;
@@ -286,7 +276,7 @@ p.custom-heading {
 	text-transform: uppercase;
 	font-weight: 300;
 	font-size: modular-scale(0, 0.9rem);
-	color: grey;
+	color: $meta-color;
 	letter-spacing: 1px;
 	margin-top: 20px;
 }
@@ -294,73 +284,6 @@ p.custom-heading {
 .logo-samples__single p {
 	line-height: modular-scale(0, 1rem);
 }
-
-
-
-// h1.font-title {
-// 	font-family: $feature-font;
-// 	font-weight: 700;
-// 	font-size: modular-scale(0, 3.125rem); 
-// 	line-height: modular-scale(0, 3.125rem); 
-// }
-
-// h2.font-subtitle {
-// 	font-family: $feature-font;
-// 	font-size: modular-scale(0, 2.22rem); //40px
-// 	line-height: modular-scale(0, 3.33rem); //60px
-// }
-
-// h3.font-sect-title {
-// 	font-family: $feature-font;
-// 	font-weight: 700;
-// 	font-size: modular-scale(0, 1.23rem); //23px
-// 	line-height: modular-scale(0, 1.94rem); //35px
-// 	text-transform: uppercase;
-// }
-
-// h4.font-sect-subtitle {
-// 	font-family: $script-font;
-// 	font-weight: 600;
-// 	font-size: modular-scale(0, 1.33rem); //24px
-// 	line-height: modular-scale(0, 1.83rem); //33px
-// }
-
-// p.typography__introtext {
-// 	font-family: $feature-font;
-// 	font-style: italic;
-// 	font-weight: 400;
-// 	font-size: modular-scale(0);
-// 	line-height: modular-scale(0, 1.33rem);
-// 	margin-top: modular-scale(0, 1.25rem); //20px
-// }
-
-// p.typography__bodycopy {
-// 	font-family: $feature-font;
-// 	font-weight: 400;
-// 	font-size: modular-scale(0);
-// 	line-height: modular-scale(0, 1.25rem); //20px
-// 	margin-top: modular-scale(0, 1.25rem); //20px
-// }
-
-// p.typography__blockquote {
-// 	font-family: $script-font;
-// 	font-weight: 600;
-// 	font-size: modular-scale(0, 1.22rem);
-// 	line-height: modular-scale(0, 1.44rem);
-// 	color: #181818;
-// 	margin-bottom: 0;
-// 	margin-top: modular-scale(0, 1.25rem); //20px
-// }
-
-// p.typography__blockquote--src {
-// 	font-family: $quote-src;
-// 	font-size: modular-scale(0, 0.78rem); //14px
-// 	// line-height: modular-scale(0, 1.33rem); //24px
-// 	line-height: modular-scale(3);
-// 	color: #131313;
-// 	// margin-top: modular-scale(-3);
-// 	text-transform: uppercase;
-// }
 
 // PHOTOGRAPHY SECTION ==================
 
@@ -374,7 +297,7 @@ p.custom-heading {
 .tone__content {
 }
 
-// COLOURS 
+// COLOURS ===========================
 .color-details,
 .scolor-details {
 	padding: 5px 10px;
@@ -384,7 +307,6 @@ p.custom-heading {
 		font-weight: 300;
 		font-size: modular-scale(0, 0.9rem);
 		color: grey;
-		// letter-spacing: 1px;
 		margin: 0;
 		background-color: white;
 		padding: 3px;
@@ -400,4 +322,14 @@ p.custom-heading {
 	}
 }
 
+// TEMPLATES ========================
+
+#templates ul.template-links {
+	li {
+		a {
+			text-decoration: none;
+			color: $black-m;
+		}
+	}
+}
 
