--- a/styleguide/custom/themes/styleguide/src/sass/helpers/_variables.scss
+++ b/styleguide/custom/themes/styleguide/src/sass/helpers/_variables.scss
@@ -1,7 +1,6 @@
+// Fonts Families
 $title-font: "open-sans",sans-serif;
-// $p-font: 'chaparral-pro',sans-serif;
 $p-font: "open-sans",sans-serif;
-// $p-font: "brandon-grotesque", sans-serif;
 $main-headings: "open-sans",sans-serif;
 $big-headings: "open-sans", sans-serif;
 $feature-font: "adelle",serif;
@@ -21,7 +20,8 @@ $base-border-radius: rem(3);
 // Colors
 $white: 	rgba(255, 255, 255, 1);
 $black: 	rgba(0, 0, 0, 1);
-$grey: 		rgba(151, 151, 151, 1);
+$black-m:	rgba(0,0,0,0.85); //muted black - for body copy
+$grey: 		rgba(128, 128, 128, 1);
 $green: 	rgba(57, 148 , 107, 1);
 $orange: 	rgba(223, 110, 29, 1);
 $yellow:	rgba(253, 191, 86, 1);
@@ -39,11 +39,14 @@ $button-color: $green;
 $button-hover-color: $green;
 
 // Font Colors
-$base-font-color: $black;
+$base-font-color: $black-m;
 $base-accent-color: $green;
 $light-font-color: $white;
 $header-font-color: $green;
 $headline-font-color: $white;
+
+// Meta Colours - logo and color samples
+$meta-color: $grey;
 
 // Link Colors
 $base-link-color: $base-font-color;
