--- a/styleguide/custom/themes/styleguide/src/sass/layout/_header.scss
+++ b/styleguide/custom/themes/styleguide/src/sass/layout/_header.scss
@@ -1,20 +1,19 @@
 .main-header {
-	// width: 100%;
 	height: 105px;
 	background: white;
-	// background: yellow;
 	position: fixed;
 	z-index: 999;
 	box-shadow: 0px 0px 7px rgba(0,0,0, 0.4);
 	width: 100%;
+	@include media($bp-small) {
+		height: 85px;
+    }
 }
 
 .main-header {
 	.main-wrapper {
-		display: flex;
-		// justify-content: space-between;
-		align-items: center;
-		// margin: 0;
+		@include display(flex);
+		@include align-items(center);
 		h1 {
 			text-transform: uppercase;
 			margin: 0;
@@ -30,35 +29,7 @@
 	width: auto;
 	margin-right: 15px;
 	margin-top: 12px;
+	@include media($bp-small) {
+		max-height: 60px;
+    }
 }
-
-// header {
-// 	width: 100%;
-// 	// min-height: 150px;
-// 	display: flex;
-// 	position: relative;
-// 	// justify-content: flex-end;
-// 	h1 {
-// 		flex: 1 0 60%;
-// 	}
-// 	.logo__holder {
-// 		flex: 1 0 40%;
-// 		display: flex;
-// 		justify-content: flex-end;
-// 		img {
-// 			// max-width: 116px;
-// 			// max-height: 103px;
-// 			position: relative;
-// 			width: 40%;
-// 			height: 40%;
-// 			margin-top: 20px;
-// 			margin-right: 0px;
-// 			@include media($bp-small) {
-// 				margin-top: 20px;
-// 				width: 70%;
-// 				height: 70%;
-// 		    }
-// 		}
-// 	}
-	
-// }
