--- a/styleguide/custom/themes/styleguide/src/sass/layout/_main-colors.scss
+++ b/styleguide/custom/themes/styleguide/src/sass/layout/_main-colors.scss
@@ -1,12 +1,11 @@
 // COLORS
 .colors__holder {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	flex-wrap: wrap;
+	@include display(flex);
+	@include align-items(center);
+	@include justify-content(space-between);
+	@include flex-wrap(wrap);
 	@include media($bp-small) {
-		flex-direction: column;
-
+		@include flex-direction(column);
     }
 }
 
@@ -19,22 +18,23 @@
 
 .color-container,
 .secondary-colors {
-	display: flex;
-	padding-top: 25px;
+	padding-top: 25px;	
+	@include display(flex);
+	@include flex-wrap(wrap);
 	// @include justify-content(space-between);
-	
 }
 
 .single-color {
-	display: flex;
-	flex-wrap: wrap;
 	margin-right: 25px;
+	margin-bottom: 25px;
+	@include display(flex);
+	@include flex-wrap(wrap);
 }
 
 .single-scolor {
-	display: flex;
-	flex-direction: column;
-	@include flex(0 0 30%);
+	margin-right: 25px;
+	@include display(flex);
+	@include flex-direction(column);
 	.scolors__column {
 		height: 100px;
 		width: 100px;
@@ -45,11 +45,10 @@
 .colors__column-3 {
 	width: 193px;
 	height: 294px;
-	// @include span-columns(3);
 	margin: 0;
-	display: flex;
-	align-items: center;
-	justify-content: center;
+	@include display(flex);
+	@include align-items(center);
+	@include justify-content(center);
 	@include media($bp-small) {
 		margin: 10px;
     }
@@ -60,15 +59,10 @@
 	height: 150px;
 	margin: 0;
 	position: relative;
-	// border: 1px solid lightgrey;
 	@include media($bp-small) {
 		margin: 10px;
     }
     figcaption {
-		// position: absolute;
-		// bottom: 10px;
-		// left: 5px;
-		// background-color: white;
     }
 }
 
