--- a/styleguide/custom/themes/styleguide/src/sass/layout/_main.scss
+++ b/styleguide/custom/themes/styleguide/src/sass/layout/_main.scss
@@ -4,8 +4,6 @@ body {
 
 main,
 .main-wrapper {
-	// max-width: 1024px;
-	// margin: auto;
 	padding: 0 50px 50px;
 	@include outer-container;
 	@include media($bp-small) {
@@ -16,6 +14,9 @@ main,
 .content-wrapper {
 	padding-top: 120px;
 	z-index: 998;
+	@include media($bp-small) {
+		padding-top: 90px;
+    }
 }
 
 .main-articles {
@@ -27,10 +28,7 @@ main,
 		@include shift(3);
 		float: none;
 		padding: 10px 40px 40px;
-		// margin-top: -200px;
-		// margin-left: 30px;
     }
-    // border: 1px solid lightgrey;
     img {
     	position: relative;
     	width: 100%;
@@ -63,7 +61,6 @@ main,
 }
 
 article {
-	// margin-top: 50px;
 	margin-bottom: 120px;
 }
 
