--- a/custom/themes/ingenuity/src/sass/layout/_projects.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_projects.scss
@@ -12,14 +12,17 @@
 .projects__panel-link {
 	width: 100%;
 	transition: all 0.2s;
-	&:hover .projects__panel-wrap .projects__panel-img { 
-		filter: grayscale(0.8);
+	&:hover .projects__panel-wrap .color-overlay .projects__panel-img { 
+		filter: grayscale(0.3);
 		background-blend-mode: normal;
-		filter: brightness(0.3);
+		filter: brightness(0.7);
 	}
 }
 
 .projects__panel-wrap {
+	h2 {
+		z-index: 35;
+	}
 	position: relative;
 	height: 300px;
 	@include media($bp-small) {
@@ -31,33 +34,35 @@
 	@include media($bp-large) {
 	    height: 300px;
 	}
-	.projects__panel-img {
+	.color-overlay {
 		width: 100%;
 		height: 100%;
-		background-size: cover;
-		background-repeat: no-repeat;
-		background-position: center center;
-		position: absolute;
+		background-color: rgba(252, 216, 56, 0.7);
+		filter: brightness(70%);
+		position: relative;
 		top: 0;
 		left: 0;
-		// transition: all 0.2s;
-		padding: 25px;
-		filter: grayscale(0.0);
-		filter: brightness(70%);
-		background-blend-mode: hard-light;
-		@include display(flex);
-		@include align-items(center);
-		@include justify-content(center);
-		.color-overlay {
-			// width: 100%;
-			// height: 100%;
-			// background-color: rgba(252, 216, 56, 0.4);
-			// filter: brightness(70%);
-			// position: absolute;
-			// top: 0;
-			// left: 0;
-			// transition: all 0.2s;
-		}
+		transition: all 0.2s;
+		z-index: 30;
+	}
+	.projects__panel-img {
+	width: 100%;
+	height: 100%;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center center;
+	position: absolute;
+	top: 0;
+	left: 0;
+	// transition: all 0.2s;
+	padding: 25px;
+	filter: brightness(80%);
+	filter: grayscale(80%);
+	background-blend-mode: hard-light;
+	@include display(flex);
+	@include align-items(center);
+	@include justify-content(center);
+	z-index: 29;
 	}
 }
 
