--- a/custom/themes/ingenuity/src/sass/layout/_projects.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_projects.scss
@@ -11,11 +11,16 @@
 
 .projects__panel-link {
 	width: 100%;
-	transition: all 0.2s;
-	&:hover .projects__panel-wrap .color-overlay .projects__panel-img { 
-		filter: grayscale(0.3);
-		background-blend-mode: normal;
-		filter: brightness(0.7);
+	// transition: all 0.2s;
+	&:hover .projects__panel-wrap {
+		.color-overlay {
+			opacity: 0;		
+		}
+		.projects__panel-img { 
+			filter: grayscale(0.8);
+			background-blend-mode: normal;
+			filter: brightness(0.7);
+		}
 	}
 }
 
@@ -42,7 +47,7 @@
 		position: relative;
 		top: 0;
 		left: 0;
-		transition: all 0.2s;
+		// transition: all 0.2s;
 		z-index: 30;
 	}
 	.projects__panel-img {
