--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -363,6 +363,8 @@ main {
 		color: rgba(0,0,0,0.90);
 	}
 	h3 {
+		text-transform: uppercase;
+		margin-bottom: 5px;
 		@include media($mobile-landscape) {
 		    margin-top: 20px;
 		}
