--- a/custom/themes/ingenuity/src/sass/components/_gallery.scss
+++ b/custom/themes/ingenuity/src/sass/components/_gallery.scss
@@ -20,6 +20,7 @@
     @include media($bp-large) {
         @include flex-direction(row);
         @include flex-wrap(wrap);
+        padding: 0 50px;
     }
     @include media($tablet-landscape) {
         padding: 0 50px;
@@ -102,6 +103,9 @@
 .gallery__single:nth-child(even) .gallery__single-half.gallery-image {
     @include order(2);
     @include media($bp-small) {
+        @include order(-1);
+    }
+    @include media($bp-med) {
         @include order(-1);
     }
     @include media($mobile-landscape) {
