--- a/custom/themes/ingenuity/src/sass/components/_gallery.scss
+++ b/custom/themes/ingenuity/src/sass/components/_gallery.scss
@@ -20,7 +20,7 @@
     @include media($bp-large) {
         @include flex-direction(row);
         @include flex-wrap(wrap);
-        padding: 0 50px;
+        padding: 0 50px 20px;
     }
     @include media($tablet-landscape) {
         padding: 0 50px;
