--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -465,7 +465,7 @@ main {
 .main-content.about-page {
 	blockquote {
 		// color: $white;
-		background-color: rgba(0,0,0,0.0);
+		background-color: $yellow;
 	}
 }
 
