--- a/custom/themes/ingenuity/src/sass/components/_buttons.scss
+++ b/custom/themes/ingenuity/src/sass/components/_buttons.scss
@@ -15,6 +15,11 @@
   top: 50px;
   right: 10%;
   z-index: 901;
+  @include media($bp-small) {
+    width: 200px;
+    left: 10%;
+    margin: 50px auto;
+  }
 }
 
 #banner-badge > div {
@@ -48,6 +53,11 @@
   color: $black;
   padding: 5px;
   text-transform: uppercase;
+  @include media($bp-small) {
+    font-size: modular-scale(0, 0.8rem);
+    line-height: modular-scale(0, 0.8rem);
+    padding-top: 10px;
+  }
   p {
 	font-family: $main-headings;
 	font-size: modular-scale(0, 1rem);
