--- a/custom/themes/ingenuity/src/sass/components/_gallery.scss
+++ b/custom/themes/ingenuity/src/sass/components/_gallery.scss
@@ -90,9 +90,10 @@
     }
     p {
         margin: 0;
-        font-size: modular-scale(0, 1.3rem);
-        line-height: modular-scale(1, 1.3rem);
+        font-size: modular-scale(0, 1rem);
+        line-height: modular-scale(1, 1rem);
         font-weight: 300;
+        // font-family: $lite-headings;
         @include media($bp-small) {
             font-size: modular-scale(0, 1rem);
             line-height: modular-scale(1, 1rem);
