Update: badge mobile

--- a/custom/themes/ingenuity/src/sass/components/_buttons.scss
+++ b/custom/themes/ingenuity/src/sass/components/_buttons.scss
@@ -23,6 +23,10 @@
     margin: 0 auto;
     height: 90px
   }
+  @include media($mobile-landscape) {
+    top: 70%;
+    left: 10%;
+  }
 }
 
 #banner-badge > div,
