--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -402,7 +402,8 @@ main {
 	}
 }
 
-.blog-entry > p:first-child {
+.blog-entry > p:first-child,
+.blog-entry > blockquote:first-child {
 	&:first-letter {
 	    float: left; 
         font-size: modular-scale(7); 
@@ -421,6 +422,14 @@ main {
             padding: 0 10px 0 5px;
             float: left;
         }
+	}
+}
+
+.blog-entry > blockquote:first-child {
+	&:first-letter {
+		padding: -20px 25px 0;
+		margin-top: -30px;
+		margin-bottom: 20px;
 	}
 }
 
