--- a/custom/themes/ingenuity/src/sass/helpers/_variables.scss
+++ b/custom/themes/ingenuity/src/sass/helpers/_variables.scss
@@ -40,15 +40,14 @@
  * © 2015 MyFonts Inc
 */
 
-
 /* @import must be at top of file, otherwise CSS will not work */
 @import url("//hello.myfonts.net/count/2f2e8b");
 
   
-@font-face {font-family: 'Audimat3000-Gras';src: url('webfonts/2F2E8B_0_0.eot');src: url('webfonts/2F2E8B_0_0.eot?#iefix') format('embedded-opentype'),url('webfonts/2F2E8B_0_0.woff2') format('woff2'),url('webfonts/2F2E8B_0_0.woff') format('woff'),url('webfonts/2F2E8B_0_0.ttf') format('truetype');}
+@font-face {font-family: 'Audimat3000-Gras';src: url('../webfonts/2F2E8B_0_0.eot');src: url('../webfonts/2F2E8B_0_0.eot?#iefix') format('embedded-opentype'),url('../webfonts/2F2E8B_0_0.woff2') format('woff2'),url('../webfonts/2F2E8B_0_0.woff') format('woff'),url('../webfonts/2F2E8B_0_0.ttf') format('truetype');}
  
   
-@font-face {font-family: 'Audimat3000-GrasItalique';src: url('webfonts/2F2E8B_1_0.eot');src: url('webfonts/2F2E8B_1_0.eot?#iefix') format('embedded-opentype'),url('webfonts/2F2E8B_1_0.woff2') format('woff2'),url('webfonts/2F2E8B_1_0.woff') format('woff'),url('webfonts/2F2E8B_1_0.ttf') format('truetype');}
+@font-face {font-family: 'Audimat3000-GrasItalique';src: url('../webfonts/2F2E8B_1_0.eot');src: url('../webfonts/2F2E8B_1_0.eot?#iefix') format('embedded-opentype'),url('../webfonts/2F2E8B_1_0.woff2') format('woff2'),url('../webfonts/2F2E8B_1_0.woff') format('woff'),url('../webfonts/2F2E8B_1_0.ttf') format('truetype');}
  
   
 @font-face {font-family: 'Audimat3000-Mi-gras';src: url('../webfonts/2F2E8B_2_0.eot');src: url('../webfonts/2F2E8B_2_0.eot?#iefix') format('embedded-opentype'),url('../webfonts/2F2E8B_2_0.woff2') format('woff2'),url('../webfonts/2F2E8B_2_0.woff') format('woff'),url('../webfonts/2F2E8B_2_0.ttf') format('truetype');}
@@ -57,25 +56,25 @@
 @font-face {font-family: 'Audimat3000-Leger';src: url('../webfonts/2F2E8B_3_0.eot');src: url('../webfonts/2F2E8B_3_0.eot?#iefix') format('embedded-opentype'),url('../webfonts/2F2E8B_3_0.woff2') format('woff2'),url('../webfonts/2F2E8B_3_0.woff') format('woff'),url('../webfonts/2F2E8B_3_0.ttf') format('truetype');}
  
   
-@font-face {font-family: 'Audimat3000-LegerItalique';src: url('webfonts/2F2E8B_4_0.eot');src: url('webfonts/2F2E8B_4_0.eot?#iefix') format('embedded-opentype'),url('webfonts/2F2E8B_4_0.woff2') format('woff2'),url('webfonts/2F2E8B_4_0.woff') format('woff'),url('webfonts/2F2E8B_4_0.ttf') format('truetype');}
+@font-face {font-family: 'Audimat3000-LegerItalique';src: url('../webfonts/2F2E8B_4_0.eot');src: url('../webfonts/2F2E8B_4_0.eot?#iefix') format('embedded-opentype'),url('../webfonts/2F2E8B_4_0.woff2') format('woff2'),url('../webfonts/2F2E8B_4_0.woff') format('woff'),url('../webfonts/2F2E8B_4_0.ttf') format('truetype');}
  
   
-@font-face {font-family: 'Audimat3000-Mi-grasItalique';src: url('webfonts/2F2E8B_5_0.eot');src: url('webfonts/2F2E8B_5_0.eot?#iefix') format('embedded-opentype'),url('webfonts/2F2E8B_5_0.woff2') format('woff2'),url('webfonts/2F2E8B_5_0.woff') format('woff'),url('webfonts/2F2E8B_5_0.ttf') format('truetype');}
+@font-face {font-family: 'Audimat3000-Mi-grasItalique';src: url('../webfonts/2F2E8B_5_0.eot');src: url('../webfonts/2F2E8B_5_0.eot?#iefix') format('embedded-opentype'),url('../webfonts/2F2E8B_5_0.woff2') format('woff2'),url('../webfonts/2F2E8B_5_0.woff') format('woff'),url('../webfonts/2F2E8B_5_0.ttf') format('truetype');}
  
   
 @font-face {font-family: 'Audimat3000-Regulier';src: url('../webfonts/2F2E8B_6_0.eot');src: url('../webfonts/2F2E8B_6_0.eot?#iefix') format('embedded-opentype'),url('../webfonts/2F2E8B_6_0.woff2') format('woff2'),url('../webfonts/2F2E8B_6_0.woff') format('woff'),url('../webfonts/2F2E8B_6_0.ttf') format('truetype');}
  
   
-@font-face {font-family: 'Audimat3000-RegulierItalique';src: url('webfonts/2F2E8B_7_0.eot');src: url('webfonts/2F2E8B_7_0.eot?#iefix') format('embedded-opentype'),url('webfonts/2F2E8B_7_0.woff2') format('woff2'),url('webfonts/2F2E8B_7_0.woff') format('woff'),url('webfonts/2F2E8B_7_0.ttf') format('truetype');}
+@font-face {font-family: 'Audimat3000-RegulierItalique';src: url('../webfonts/2F2E8B_7_0.eot');src: url('../webfonts/2F2E8B_7_0.eot?#iefix') format('embedded-opentype'),url('../webfonts/2F2E8B_7_0.woff2') format('woff2'),url('../webfonts/2F2E8B_7_0.woff') format('woff'),url('../webfonts/2F2E8B_7_0.ttf') format('truetype');}
  
 @font-face {
 	font-family: 'Archer-Light-Pro';
-	src: url('webfonts/Archer-Light-Pro.otf');
+	src: url('../webfonts/Archer-Light-Pro.otf');
 }
 
 @font-face {
 	font-family: 'Archer-Medium-Pro';
-	src: url('webfonts/Archer-Medium-Pro.otf');
+	src: url('../webfonts/Archer-Medium-Pro.otf');
 }
 
 
