--- a/custom/themes/ingenuity/src/sass/layout/_projects.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_projects.scss
@@ -98,8 +98,9 @@
 // Project Video
 
 .project__video {
-	// background-color: rgba(0,0,0,0.8);
+	background-color: rgba(0,0,0,1);
 	margin: 0 0 50px;
+	padding: 50px 30px;
 }
 
 .js-video {
