Update: gallery tweak

--- a/custom/themes/ingenuity/src/sass/components/_gallery.scss
+++ b/custom/themes/ingenuity/src/sass/components/_gallery.scss
@@ -13,6 +13,10 @@
         @include flex-direction(column);
         @include flex-wrap(wrap);
     }
+    @include media($bp-med) {
+        @include flex-direction(column);
+        @include flex-wrap(wrap);
+    }
     @include media($mobile-landscape) {
         @include flex-direction(column);
         @include flex-wrap(wrap);
