--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -427,7 +427,8 @@ main {
 	}
 }
 
-.blog-entry > blockquote:first-child {
+.blog-entry > blockquote:first-child,
+.blog-entry > blockquote:first-child p {
 	&:first-letter {
 		padding: -20px 25px 0;
 		margin-top: -30px;
