Update: drop cap fix

--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -406,7 +406,7 @@ main {
 
 .blog-entry > p:first-child,
 .blog-entry > blockquote:first-child {
-	&:first-letter {
+	&::first-letter {
 	    float: left; 
         font-size: modular-scale(7); 
         line-height: modular-scale(6);
@@ -429,7 +429,7 @@ main {
 
 .blog-entry > blockquote:first-child,
 .blog-entry > blockquote:first-child p {
-	&:first-letter {
+	&::first-letter {
 	    float: left; 
         font-size: modular-scale(7); 
         line-height: modular-scale(6);
