--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -430,12 +430,10 @@ main {
 .blog-entry > blockquote:first-child,
 .blog-entry > blockquote:first-child > p:first-child {
 	&::first-letter {
-	    float: left; 
+	    float: left;
         font-size: modular-scale(7); 
         line-height: modular-scale(6);
-		padding: -20px 25px 0;
-		margin-top: -30px;
-		margin-bottom: 20px;
+        padding: 7px 25px 0px 0px;
 	}
 }
 
