--- a/custom/themes/ingenuity/src/sass/components/_navigation.scss
+++ b/custom/themes/ingenuity/src/sass/components/_navigation.scss
@@ -238,7 +238,7 @@ nav.expanded {
   height: 100%;
   position: fixed;
   cursor: default;
-  background: rgba(252, 216, 56,0.95);
+  background: rgba(252, 216, 56, 0.95);
   overflow-y: scroll;
   .site-width>a {
     color: $black;
@@ -252,7 +252,7 @@ nav.expanded {
 
 nav.default-home-header.logo-appear.detached.expanded {
   @include media($bp-small) {
-    background: rgba(252, 216, 56,0.95);
+    background: rgba(252, 216, 56, 0.95);
     height: 100%;
   }
 }
@@ -263,7 +263,7 @@ nav.expanded {
   height: 100%;
   position: fixed;
   cursor: default;
-  background: rgba(252, 216, 56,1);
+  background: rgba(252, 216, 56, 1);
   overflow-y: scroll;
   .site-width>a {
     color: $black;
