--- a/custom/themes/ingenuity/src/sass/layout/_home.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_home.scss
@@ -219,6 +219,7 @@ div.rw-words.rw-words-1 {
 		// bottom: -50px;
 		left: 0;
 		padding-left: 40px;
+		margin: 0;
 	}
 	@include media($bp-med) {
 		// bottom: -100px;
@@ -233,7 +234,7 @@ div.rw-words.rw-words-1 {
 	}
 }
 
-span.sq-ft {
+.rw-words a span.sq-ft {
 	display: inline;
 	font-size: modular-scale(2, 1.3rem); 
 	line-height: modular-scale(2, 1.6rem); 
