--- a/custom/themes/ingenuity/src/sass/layout/_home.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_home.scss
@@ -130,14 +130,14 @@ h2.rw-sentence{
 	@include media($bp-large) {
 		margin: 0 8%;
 		text-align: left;
-	    font-size: modular-scale(5, 1.5rem); 
-		line-height: modular-scale(5, 1.75rem); 
+	    font-size: modular-scale(5, 1.2rem); 
+		line-height: modular-scale(5, 1.5rem); 
 	}	
 	@include media($bp-xlarge) {
 		margin: 0 8%;
 		text-align: left;
-	    font-size: modular-scale(5, 1.45rem); 
-		line-height: modular-scale(5, 1.7rem);
+	    font-size: modular-scale(5, 1.2rem); 
+		line-height: modular-scale(5, 1.5rem);
 	}
 	@include media($bp-xxlarge) {
 		margin: 0 8%;
@@ -230,7 +230,7 @@ div.rw-words.rw-words-1 {
 		// bottom: -100px;
 		bottom: 0;
 		left: -20px; 
-		// padding-left: 410px;
+		padding-left: 420px;
 	}
 }
 
