--- a/custom/themes/ingenuity/src/sass/layout/_home.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_home.scss
@@ -218,8 +218,9 @@ div.rw-words.rw-words-1 {
 	padding-right: 8px;
 	@include media($bp-small) {
 		left: 0;
-		padding-left: 40px;
+		// padding-left: 40px;
 		margin: 0;
+		bottom: -50px;
 	}
 	@include media($bp-med) {
 		left: -20px;
